# permstream-nucleus

./: .gitignore  BENCHMARKS.md  CODEX_SUMMARY_20251227_211331.md  Cargo.toml  DESIGN_CHOICES.md  FORMAT.md  LAUNCH_POST.md  LICENSE  LZBENCH_RECEIPTS.md  MARKET_RESEARCH_PROMPTS.md  PERMSTREAM_SUMMARY_FOR_RESEARCH.md  PLAN  PRICING.md  README.md  REDTEAM_AUDIT.md  STATUS.md  SUMMARY_20251227_100733.md  SUMMARY_20251227_140804.json  THUNDERING_HERD_REPORT.md  THUNDERING_HERD_RESEARCH_PROMPTS.md  bench.py  bench_2026.py  bench_journal.py  bench_silesia.py  permstream-nucleus-plan.md  permstreamOG.py  permstream_pro copy.py  permstream_pro.py  psfs.py  psfs_compact.py  psfs_fsck.py  psfs_fuse.py  psfs_journal.py  requirements.txt  run_full_audit.sh  test.psfs  test_enterprise.psfs  test_path  test_path.rs
clients/python/permstream-torch/: setup.py
clients/python/permstream-torch/permstream_torch/: __init__.py  dataloader.py  permstream_pb2.py  permstream_pb2_grpc.py  vllm_loader.py
clients/python/permstream-torch/permstream_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/arrow-permstream/: README.md
integrations/arrow-permstream/src/: codec.rs
integrations/lzbench/bench/: codecs.h  lz_codecs.cpp  lzbench.h
integrations/pytorch-permstream/: README.md  setup.py
integrations/pytorch-permstream/src/: extension.cpp
integrations/tracing-permstream/: Cargo.toml
integrations/tracing-permstream/src/: lib.rs
libpermstream/: Cargo.toml
libpermstream/src/: arithmetic_test.rs  ffi.rs  gpu.rs  lib.rs  rag.rs  telemetry.rs  transform_test.rs
nucleus-writer/: Cargo.toml  LICENSE.BSL  README.md
nucleus-writer/src/: main.rs
psfsd/: Cargo.toml  build.rs
psfsd/proto/: permstream.proto
psfsd/src/: ipc_server.rs  main.rs
