[package]
name = "nucleus-writer"
version = "0.1.0"
edition = "2021"
description = "PermStream Nucleus - Enterprise Encoder (Paid Writer)"
license-file = "LICENSE.BSL"

[dependencies]
libpermstream = { path = "../libpermstream" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
obfstr = "0.4"
serde_json = "1.0"
rand = "0.8"
walkdir = "2.5.0"
sha2 = "0.10.9"
