[package]
name = "psfsd"
version = "0.1.0"
edition = "2024"

[dependencies]
libpermstream = { path = "../libpermstream" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
aes-gcm = "0.10"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
walkdir = "2.3"

byteorder = "1.4"
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"
crc32fast = "1.3"
sha2 = "0.10"
bitvec = "1.0"
rmcp = { version = "0.1", features = ["transport-io"] }
schemars = "0.8"
tonic = "0.10"
prost = "0.12"
dashmap = "6.1.0"
iceoryx2 = "0.8.1"
[build-dependencies]
tonic-build = "0.10"
