[package]
name = "tracing-permstream"
version = "0.1.0"
edition = "2021"
description = "PermStream custom layer for structured log compression"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "json"] }
tracing-core = "0.1"
libpermstream = { path = "../../libpermstream" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
